# AndroidNativeCustomSeekBar

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/App/: ComponentFactory.h  Context.h  IComponentFactory.h
app/src/main/cpp/include/Core/: Color.h  IMediaController.h  ISeekProxy.h  ISeekProxyFactory.h  ISeekStateListener.h  MetronomeService.h  SeekBarManager.h  SeekProxy.h  SeekProxyFactory.h  SeekStateListener.h  Segment.h
app/src/main/cpp/include/Drawing/: ISkiaDrawer.h  ISkiaDrawerFactory.h  Renderable.h  SeekBarDrawer.h  SkiaDrawer.h  SkiaDrawerFactory.h
app/src/main/cpp/include/Graphics/: Graphics.h
app/src/main/cpp/include/Utils/: JNIUtils.h
app/src/main/cpp/include/View/: Color.h  SeekBarView.h  SeekBarViewBuilder.h  SeekLoadingView.h
app/src/main/cpp/src/App/: Context.cpp
app/src/main/cpp/src/Core/: MetronomeService.cpp  SeekBarManager.cpp  SeekProxy.cpp  SeekStateListener.cpp
app/src/main/cpp/src/Drawing/: SeekBarDrawer.cpp  SkiaDrawer.cpp
app/src/main/cpp/src/Utils/: JNIUtils.cpp
app/src/main/cpp/src/View/: SeekBarView.cpp  SeekBarViewBuilder.cpp  SeekLoadingView.cpp
app/src/main/java/com/example/customseekbar/: DoubleTapSeekListener.kt  MainActivity.kt
app/src/main/java/com/example/customseekbar/SeekBarFactory/: SeekBarFactory.kt  Segment.kt
app/src/main/res/values/: strings.xml
app/src/test/cpp/: CMakeLists.txt
app/src/test/cpp/App/: MocksComponentFactory.h
app/src/test/cpp/Mocks/Core/: MockMediaController.h  MockSeekProxy.h  MockSeekProxyFactory.h  MockSeekStateListener.h
app/src/test/cpp/Unittests/: SeekProxyTests.cpp
gradle/wrapper/: gradle-wrapper.properties
